# java

./: FFMpeg学习笔记.md  TS文件格式整理.md  YUV数据格式.md  build_android_standalone.sh  pthread相关文档.md  surfaceView.md  videoStudy.md
CameraStudy/: settings.gradle
CameraStudy/app/: build.gradle
CameraStudy/app/src/androidTest/java/com/example/camerastudy/: ExampleInstrumentedTest.java
CameraStudy/app/src/main/: AndroidManifest.xml
CameraStudy/app/src/main/java/com/example/camerastudy/: CameraSurfaceView.java  MainActivity.java
CameraStudy/app/src/main/java/com/example/camerastudy/util/: CameraUtils.java
CameraStudy/app/src/main/res/values/: strings.xml
CameraStudy/app/src/test/java/com/example/camerastudy/: ExampleUnitTest.java
CameraStudy/gradle/wrapper/: gradle-wrapper.properties
FFMpeg/: settings.gradle
FFMpeg/app/: build.gradle
FFMpeg/app/src/main/: AndroidManifest.xml
FFMpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFMpeg/app/src/main/java/com/example/ffmpegstudy/: MainActivity.java
FFMpeg/app/src/main/res/layout/: activity_main.xml
FFMpeg/app/src/main/res/values/: strings.xml
FFMpeg/gradle/wrapper/: gradle-wrapper.properties
MyMediaPlayer/app/: build.gradle
MyMediaPlayer/app/src/main/: AndroidManifest.xml
MyMediaPlayer/app/src/main/java/com/example/mymediaplayer/: MainActivity.java
MyMediaPlayer/app/src/main/res/layout/: activity_main.xml
MyMediaPlayer/gradle/wrapper/: gradle-wrapper.properties
PngStudy/: settings.gradle
PngStudy/app/: build.gradle
PngStudy/app/src/androidTest/java/com/example/pngstudy/: ExampleInstrumentedTest.java
PngStudy/app/src/main/: AndroidManifest.xml
PngStudy/app/src/main/java/com/example/pngstudy/: MainActivity.java
PngStudy/app/src/main/res/values/: strings.xml
PngStudy/app/src/test/java/com/example/pngstudy/: ExampleUnitTest.java
PngStudy/gradle/wrapper/: gradle-wrapper.properties
TS文件格式/: TS文件格式整理.md
ThreadCreateTest/: settings.gradle
ThreadCreateTest/app/: build.gradle
ThreadCreateTest/app/src/androidTest/java/com/example/threadcreatetest/: ExampleInstrumentedTest.java
ThreadCreateTest/app/src/main/: AndroidManifest.xml
ThreadCreateTest/app/src/main/cpp/: native-lib.cpp
ThreadCreateTest/app/src/main/java/com/example/threadcreatetest/: MainActivity.java
ThreadCreateTest/app/src/main/res/values/: strings.xml
ThreadCreateTest/app/src/test/java/com/example/threadcreatetest/: ExampleUnitTest.java
ThreadCreateTest/gradle/wrapper/: gradle-wrapper.properties
VideoStudy/: settings.gradle
VideoStudy/app/: build.gradle
VideoStudy/app/src/androidTest/java/com/example/videostudy/: ExampleInstrumentedTest.java
VideoStudy/app/src/main/: AndroidManifest.xml
VideoStudy/app/src/main/java/com/example/videostudy/: MainActivity.java  TextureViewShowActivity.java
VideoStudy/app/src/main/java/com/example/videostudy/custom/: PictureShowView.java
VideoStudy/app/src/main/java/com/example/videostudy/ioutils/: IOUtil.java
VideoStudy/app/src/main/res/layout/: activity_main.xml
VideoStudy/gradle/wrapper/: gradle-wrapper.properties
ndk/: NDK.md
